--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#ignore vendor static files
+C:\Users\Afreh Kriss Ntim\saas\src\staticfiles\vendors
+
+#ignore local-cdn static files
+local-cdn/
+
+
 venv/
 
 # Created by https://gitignore.org
